src/test/ui/consts/miri_unleashed/box.stderr
error[E0080]: could not evaluate static initializer
  --> $DIR/box.rs:10:11
   |
LL |     &mut *(box 0)
   |           ^^^^^^^ calling non-const function `alloc::alloc::exchange_malloc`

warning: skipping const checks
   |
help: skipping check that does not even have a feature gate
  --> $DIR/box.rs:10:11
   |
LL |     &mut *(box 0)
   |           ^^^^^^^
help: skipping check for `const_mut_refs` feature
  --> $DIR/box.rs:10:16
   |
LL |     &mut *(box 0)
   |                ^
help: skipping check for `const_mut_refs` feature
  --> $DIR/box.rs:10:5
   |
LL |     &mut *(box 0)
   |     ^^^^^^^^^^^^^
help: skipping check that does not even have a feature gate
  --> $DIR/box.rs:10:5
   |
LL |     &mut *(box 0)
   |     ^^^^^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0080`.
